{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 545,
  "lineage": "68b5121b-a133-9244-0285-35e7b7741710",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "main_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:719042170775:loadbalancer/app/ecs-alb/69540c232aa82e20",
            "arn_suffix": "app/ecs-alb/69540c232aa82e20",
            "dns_name": "ecs-alb-709680620.ca-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:719042170775:loadbalancer/app/ecs-alb/69540c232aa82e20",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-alb",
            "security_groups": [
              "sg-063838349901990c8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04921826d69a65935"
              },
              {
                "subnet_id": "subnet-060118cea95ffdd77"
              }
            ],
            "subnets": [
              "subnet-04921826d69a65935",
              "subnet-060118cea95ffdd77"
            ],
            "tags": {
              "Name": "ManageUser-Dev"
            },
            "vpc_id": "vpc-02570e562bb7d9830",
            "zone_id": "ZQSVJUPU6J1EY"
          },
          "dependencies": [
            "module.security.aws_security_group.sg_ecs_lb",
            "module.security.aws_security_group.sg_ecs_tasks",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.user_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "https_forward",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:719042170775:listener/app/ecs-alb/69540c232aa82e20/c0c92e0fc654d51a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:719042170775:targetgroup/tf-ecs-chat/64ab8e7bf023bbd5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:719042170775:listener/app/ecs-alb/69540c232aa82e20/c0c92e0fc654d51a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:719042170775:loadbalancer/app/ecs-alb/69540c232aa82e20",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.alb.aws_alb.main_alb",
            "module.alb.aws_alb_target_group.alb_tg",
            "module.security.aws_security_group.sg_ecs_lb",
            "module.security.aws_security_group.sg_ecs_tasks",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.user_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:719042170775:targetgroup/tf-ecs-chat/64ab8e7bf023bbd5",
            "arn_suffix": "targetgroup/tf-ecs-chat/64ab8e7bf023bbd5",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:719042170775:targetgroup/tf-ecs-chat/64ab8e7bf023bbd5",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-ecs-chat",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ManageUser-Dev"
            },
            "target_type": "ip",
            "vpc_id": "vpc-02570e562bb7d9830"
          },
          "dependencies": [
            "module.vpc.aws_vpc.user_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_ecs_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:719042170775:security-group/sg-042c116edfcb631c0",
            "description": "controls access to the Application Load Balancer (ALB)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042c116edfcb631c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-alb-sg",
            "name_prefix": "",
            "owner_id": "719042170775",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ManageUser-Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-02570e562bb7d9830"
          },
          "dependencies": [
            "module.vpc.aws_vpc.user_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:719042170775:security-group/sg-063838349901990c8",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063838349901990c8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-042c116edfcb631c0"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ecs-tasks-lb",
            "name_prefix": "",
            "owner_id": "719042170775",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ManageUser-Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-02570e562bb7d9830"
          },
          "dependencies": [
            "module.security.aws_security_group.sg_ecs_lb",
            "module.vpc.aws_vpc.user_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-043775a26dc9cf4f8",
            "public_dns": "ec2-3-96-31-125.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.96.31.125",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ManageUser-Dev"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.user_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0c18bd27824306bf0",
            "public_dns": "ec2-3-97-57-242.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.97.57.242",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ManageUser-Dev"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.user_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:719042170775:internet-gateway/igw-071769f2d7745ab29",
            "id": "igw-071769f2d7745ab29",
            "owner_id": "719042170775",
            "tags": {
              "Name": "ManageUser-Dev"
            },
            "vpc_id": "vpc-02570e562bb7d9830"
          },
          "dependencies": [
            "module.vpc.aws_vpc.user_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-043775a26dc9cf4f8",
            "id": "nat-051d33f2870d1a754",
            "network_interface_id": "eni-0fd17dd72cdc115e6",
            "private_ip": "172.17.2.243",
            "public_ip": "3.96.31.125",
            "subnet_id": "subnet-04921826d69a65935",
            "tags": {
              "Name": "ManageUser-Dev"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.user_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c18bd27824306bf0",
            "id": "nat-08983e1d3a8ef2b14",
            "network_interface_id": "eni-0e0bbcda1b216221c",
            "private_ip": "172.17.3.218",
            "public_ip": "3.97.57.242",
            "subnet_id": "subnet-060118cea95ffdd77",
            "tags": {
              "Name": "ManageUser-Dev"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.user_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-071769f2d7745ab29",
            "id": "r-rtb-081d09055eee4f6271080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-081d09055eee4f627",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.user_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f5d4e994cefae826",
            "owner_id": "719042170775",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-051d33f2870d1a754",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ManageUser-Dev"
            },
            "vpc_id": "vpc-02570e562bb7d9830"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.user_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02c49396e48e219dc",
            "owner_id": "719042170775",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08983e1d3a8ef2b14",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ManageUser-Dev"
            },
            "vpc_id": "vpc-02570e562bb7d9830"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.user_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b349ccb04a922c5",
            "route_table_id": "rtb-0f5d4e994cefae826",
            "subnet_id": "subnet-0f53312ec8d5fcd86"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.user_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f49e4a722fd565b4",
            "route_table_id": "rtb-02c49396e48e219dc",
            "subnet_id": "subnet-06e673a7b4e51ae71"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.user_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:719042170775:subnet/subnet-0f53312ec8d5fcd86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "172.17.0.0/24",
            "id": "subnet-0f53312ec8d5fcd86",
            "map_public_ip_on_launch": false,
            "owner_id": "719042170775",
            "tags": {
              "Name": "ManageUser-Dev"
            },
            "vpc_id": "vpc-02570e562bb7d9830"
          },
          "dependencies": [
            "module.vpc.aws_vpc.user_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:719042170775:subnet/subnet-06e673a7b4e51ae71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "172.17.1.0/24",
            "id": "subnet-06e673a7b4e51ae71",
            "map_public_ip_on_launch": false,
            "owner_id": "719042170775",
            "tags": {
              "Name": "ManageUser-Dev"
            },
            "vpc_id": "vpc-02570e562bb7d9830"
          },
          "dependencies": [
            "module.vpc.aws_vpc.user_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:719042170775:subnet/subnet-04921826d69a65935",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "172.17.2.0/24",
            "id": "subnet-04921826d69a65935",
            "map_public_ip_on_launch": true,
            "owner_id": "719042170775",
            "tags": {
              "Name": "ManageUser-Dev"
            },
            "vpc_id": "vpc-02570e562bb7d9830"
          },
          "dependencies": [
            "module.vpc.aws_vpc.user_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:719042170775:subnet/subnet-060118cea95ffdd77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "172.17.3.0/24",
            "id": "subnet-060118cea95ffdd77",
            "map_public_ip_on_launch": true,
            "owner_id": "719042170775",
            "tags": {
              "Name": "ManageUser-Dev"
            },
            "vpc_id": "vpc-02570e562bb7d9830"
          },
          "dependencies": [
            "module.vpc.aws_vpc.user_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "user_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:719042170775:vpc/vpc-02570e562bb7d9830",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-058288f84f47bbffc",
            "default_route_table_id": "rtb-081d09055eee4f627",
            "default_security_group_id": "sg-081e4ac43a70148fd",
            "dhcp_options_id": "dopt-9968c0f0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02570e562bb7d9830",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-081d09055eee4f627",
            "owner_id": "719042170775",
            "tags": {
              "Name": "ManageUser-Dev"
            }
          }
        }
      ]
    }
  ]
}